k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: healthbridge-ingress
  namespace: healthbridge
  annotations:
    kubernetes.io/ingress.class: nginx
    # This prevents the Ingress from stripping the /api prefix before sending to the Gateway
    nginx.ingress.kubernetes.io/use-regex: "true" 
spec:
  rules:
  - http:
      paths:
      # 1. API Traffic goes to the Gateway
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: api-gateway
            port:
              number: 3000
      - path: /public/api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: api-gateway
            port:
              number: 3000
      # 2. All other traffic goes to the React UI
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-service
            port:
              number: 80
